folder structure changed

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Hello Student</title>
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="card.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/card.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
     <div class="d-flex j-space-bw">
-        <div class="d-flex"> <img src="../images/logo.png" alt="" width="50px" height="50">
+        <div class="d-flex"> <img src="images/logo.png" alt="" width="50px" height="50">
             <h1 class="m-10"> Hello Student</h1>
         </div>
         <div class="social-icons">
@@ -52,8 +52,8 @@
     </ul>
     <div class="d-flex padding">
         <span class="big"> The Smarter Way to Learn<span class="big" style="color: brown;"> Anything</span></span>
-        <img src="../images//school.jpeg" alt="" height="200px " width="250px">
-        <img class="margin" src="../images//th.jpeg" alt="" height="200px " width="250px">
+        <img src="images//school.jpeg" alt="" height="200px " width="250px">
+        <img class="margin" src="images//th.jpeg" alt="" height="200px " width="250px">
 
 
 
@@ -72,7 +72,7 @@
 
     <div class="cards d-flex">
         <div class="card">
-            <img src="../images/teacher.jpeg" alt="Avatar" style="width:30%">
+            <img src="images/teacher.jpeg" alt="Avatar" style="width:30%">
             <div class="container">
                 <h4><b>Experienced Teachers
                     </b></h4>
@@ -81,14 +81,14 @@
             </div>
         </div>
         <div class="card">
-            <img src="../images/learning.jpeg" alt="Avatar" style="width:30%">
+            <img src="images/learning.jpeg" alt="Avatar" style="width:30%">
             <div class="container">
                 <h4><b>Best Learning Programm</b></h4>
                 <p>Morbi vel augue et metus pellentesque lacinia eu non odio</p>
             </div>
         </div>
         <div class="card">
-            <img src="../images/gold.jpeg" alt="Avatar" style="width:30%">
+            <img src="images/gold.jpeg" alt="Avatar" style="width:30%">
             <div class="container">
                 <h4><b>Global Certificate</b></h4>
                 <p> Etiam risus neque, volutpat vel laoreet a, finibus volutpa</p>
@@ -105,21 +105,21 @@
     </h2>
     <div class="cards1 d-flex">
         <div class="card">
-            <img src="../images/eng.jpeg" alt="Avatar" style="width:30%">
+            <img src="images/eng.jpeg" alt="Avatar" style="width:30%">
             <div class="container">
                 <h4><b>Basic English Speaking and Grammar</b></h4>
                 
             </div>
         </div>
         <div class="card">
-            <img src="../images/evs.jpeg" alt="Avatar" style="width:30%">
+            <img src="images/evs.jpeg" alt="Avatar" style="width:30%">
             <div class="container">
                 <h4><b>Environmental Studies & Earth Sciences</b></h4>
 
             </div>
         </div>
         <div class="card">
-            <img src="../images/math.jpeg" alt="Avatar" style="width:30%">
+            <img src="images/math.jpeg" alt="Avatar" style="width:30%">
             <div class="container">
                 <h4><b>Natural Sciences & Mathematics Courses</b></h4>
             </div>
@@ -131,21 +131,21 @@
     </h2>
     <div class="cards3 d-flex">
         <div class="card">
-            <img src="../images/chemistry.jpeg" alt="Avatar" style="width:80%">
+            <img src="images/chemistry.jpeg" alt="Avatar" style="width:80%">
             <h4><b>Chemistry lab</b></h4>
 
             <div class="container">
             </div>
         </div>
         <div class="card">
-            <img src="../images/games.jpeg" alt="Avatar" style="width:80%">
+            <img src="images/games.jpeg" alt="Avatar" style="width:80%">
             <div class="container">
                 <P>
                                     <h4><b>Game Zone</b></h4>
             </div>
         </div>
         <div class="card">
-            <img src="../images/teachers.jpeg" alt="Avatar" style="width:80%">
+            <img src="images/teachers.jpeg" alt="Avatar" style="width:80%">
             <div class="container">
                 <h4><b>Learning</b></h4>
             </div>
