nav bar changed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/card.css">
+    <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -17,140 +18,139 @@
             <h1 class="m-10"> Hello Student</h1>
         </div>
         <div class="social-icons">
-            <a href="#"  title="facebook"> 
+            <a href="#" title="facebook">
                 <i class="fa fa-facebook-square" aria-hidden="true"></i>
-              </a>
-              <a href="#" title="twitter"> 
+            </a>
+            <a href="#" title="twitter">
                 <i class="fa fa-twitter-square" aria-hidden="true"></i>
-              </a>
-              <a href="#" title="instagram">  
+            </a>
+            <a href="#" title="instagram">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
-              </a>
-              <a href="#" title="youtube">
+            </a>
+            <a href="#" title="youtube">
                 <i class="fa fa-youtube-square" aria-hidden="true"></i>
-              </a>
-              <a href="#" title="linkedin">
+            </a>
+            <a href="#" title="linkedin">
                 <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-              </a>
-              <a href="#" title="pinterest">
-                <i class="fa fa-pinterest-p" aria-hidden="true"></i>
-              </a>
-              <a href="#" title="camera">
-                <i class="fa fa-camera-retro" aria-hidden="true"></i>
-              </a>
+            </a>
+
         </div>
     </div>
     <hr>
-    <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="About Us">About us</a></li>
-        <li><a href="Classes">Classes</a></li>
-        <li><a href="Teachers">Teachers</a></li>
-        <li><a href="Events">Events</a></li>
-        <li><a href="Contacts">Contacts</a></li>
+    <nav class="stroke">
+        <ul>
 
-    </ul>
-    <div class="d-flex padding">
-        <span class="big"> The Smarter Way to Learn<span class="big" style="color: brown;"> Anything</span></span>
-        <img src="images//school.jpeg" alt="" height="200px " width="250px">
-        <img class="margin" src="images//th.jpeg" alt="" height="200px " width="250px">
+            <li><a href="#home">Home</a></li>
+            <li><a href="About Us">About us</a></li>
+            <li><a href="Classes">Classes</a></li>
+            <li><a href="Teachers">Teachers</a></li>
+            <li><a href="Events">Events</a></li>
+            <li><a href="Contacts">Contacts</a></li>
 
-
-
-    </div>
-    <div class="vl">
-        <p>More than a pixel-perfect WordPress theme:</p>
-        <p> bold design, innovative features, developed for </p>
-        <p>education/academic websites.</p>
-    </div>
+        </ul>
+    </nav>
+</body>
+<div class="d-flex padding">
+    <span class="big"> The Smarter Way to Learn<span class="big" style="color: brown;"> Anything</span></span>
+    <img src="images//school.jpeg" alt="" height="200px " width="250px">
+    <img class="margin" src="images//th.jpeg" alt="" height="200px " width="250px">
 
 
-    <h2 class="center">Welcome to<span class="orange" style=" color: brown;"> Hello Student</span>
-        <p>Ecosystem blended learning off-the-shelf learning storytelling explainer
-        <p> animation completion criteria.
-    </h2>
 
-    <div class="cards d-flex">
-        <div class="card">
-            <img src="images/teacher.jpeg" alt="Avatar" style="width:30%">
-            <div class="container">
-                <h4><b>Experienced Teachers
-                    </b></h4>
-                <p>A Morbi vel augue et metus pellentesque
-                <P></P> lacinia eu non odio.</p>
-            </div>
-        </div>
-        <div class="card">
-            <img src="images/learning.jpeg" alt="Avatar" style="width:30%">
-            <div class="container">
-                <h4><b>Best Learning Programm</b></h4>
-                <p>Morbi vel augue et metus pellentesque lacinia eu non odio</p>
-            </div>
-        </div>
-        <div class="card">
-            <img src="images/gold.jpeg" alt="Avatar" style="width:30%">
-            <div class="container">
-                <h4><b>Global Certificate</b></h4>
-                <p> Etiam risus neque, volutpat vel laoreet a, finibus volutpa</p>
-            </div>
+</div>
+<div class="vl">
+    <p>More than a pixel-perfect WordPress theme:</p>
+    <p> bold design, innovative features, developed for </p>
+    <p>education/academic websites.</p>
+</div>
+
+
+<h2 class="center">Welcome to<span class="orange" style=" color: brown;"> Hello Student</span>
+    <p>Ecosystem blended learning off-the-shelf learning storytelling explainer
+    <p> animation completion criteria.
+</h2>
+
+<div class="cards d-flex">
+    <div class="card">
+        <img src="images/teacher.jpeg" alt="Avatar" style="width:30%">
+        <div class="container">
+            <h4><b>Experienced Teachers
+                </b></h4>
+            <p>A Morbi vel augue et metus pellentesque
+            <P></P> lacinia eu non odio.</p>
         </div>
     </div>
-
-
-
-    </div>
-    <h2 class="center2">Our<span class="orange2" style=" color: brown;"> Classes</span>
-        <p>Application programming interface voice-over (vo) instructor led training
-        <P> curation, user created content
-    </h2>
-    <div class="cards1 d-flex">
-        <div class="card">
-            <img src="images/eng.jpeg" alt="Avatar" style="width:30%">
-            <div class="container">
-                <h4><b>Basic English Speaking and Grammar</b></h4>
-                
-            </div>
-        </div>
-        <div class="card">
-            <img src="images/evs.jpeg" alt="Avatar" style="width:30%">
-            <div class="container">
-                <h4><b>Environmental Studies & Earth Sciences</b></h4>
-
-            </div>
-        </div>
-        <div class="card">
-            <img src="images/math.jpeg" alt="Avatar" style="width:30%">
-            <div class="container">
-                <h4><b>Natural Sciences & Mathematics Courses</b></h4>
-            </div>
+    <div class="card">
+        <img src="images/learning.jpeg" alt="Avatar" style="width:30%">
+        <div class="container">
+            <h4><b>Best Learning Programm</b></h4>
+            <p>Morbi vel augue et metus pellentesque lacinia eu non odio</p>
         </div>
     </div>
-    <h2 class="center3"> Study Process<span class="orange3" style=" color: brown;"> Gallery</span>
-        <p>Instructor led training digital learning cbt completion
-        <p>criteria learning management system cognitive load byod self-directed learning knowledge
-    </h2>
-    <div class="cards3 d-flex">
-        <div class="card">
-            <img src="images/chemistry.jpeg" alt="Avatar" style="width:80%">
-            <h4><b>Chemistry lab</b></h4>
-
-            <div class="container">
-            </div>
-        </div>
-        <div class="card">
-            <img src="images/games.jpeg" alt="Avatar" style="width:80%">
-            <div class="container">
-                <P>
-                                    <h4><b>Game Zone</b></h4>
-            </div>
-        </div>
-        <div class="card">
-            <img src="images/teachers.jpeg" alt="Avatar" style="width:80%">
-            <div class="container">
-                <h4><b>Learning</b></h4>
-            </div>
+    <div class="card">
+        <img src="images/gold.jpeg" alt="Avatar" style="width:30%">
+        <div class="container">
+            <h4><b>Global Certificate</b></h4>
+            <p> Etiam risus neque, volutpat vel laoreet a, finibus volutpa</p>
         </div>
     </div>
+</div>
+
+
+
+</div>
+<h2 class="center2">Our<span class="orange2" style=" color: brown;"> Classes</span>
+    <p>Application programming interface voice-over (vo) instructor led training
+    <P> curation, user created content
+</h2>
+<div class="cards1 d-flex">
+    <div class="card">
+        <img src="images/eng.jpeg" alt="Avatar" style="width:30%">
+        <div class="container">
+            <h4><b>Basic English Speaking and Grammar</b></h4>
+
+        </div>
+    </div>
+    <div class="card">
+        <img src="images/evs.jpeg" alt="Avatar" style="width:30%">
+        <div class="container">
+            <h4><b>Environmental Studies & Earth Sciences</b></h4>
+
+        </div>
+    </div>
+    <div class="card">
+        <img src="images/math.jpeg" alt="Avatar" style="width:30%">
+        <div class="container">
+            <h4><b>Natural Sciences & Mathematics Courses</b></h4>
+        </div>
+    </div>
+</div>
+<h2 class="center3"> Study Process<span class="orange3" style=" color: brown;"> Gallery</span>
+    <p>Instructor led training digital learning cbt completion
+    <p>criteria learning management system cognitive load byod self-directed learning knowledge
+</h2>
+<div class="cards3 d-flex">
+    <div class="card">
+        <img src="images/chemistry.jpeg" alt="Avatar" style="width:80%">
+        <h4><b>Chemistry lab</b></h4>
+
+        <div class="container">
+        </div>
+    </div>
+    <div class="card">
+        <img src="images/games.jpeg" alt="Avatar" style="width:80%">
+        <div class="container">
+            <P>
+            <h4><b>Game Zone</b></h4>
+        </div>
+    </div>
+    <div class="card">
+        <img src="images/teachers.jpeg" alt="Avatar" style="width:80%">
+        <div class="container">
+            <h4><b>Learning</b></h4>
+        </div>
+    </div>
+</div>
 
 
 
