nav size changed

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
     </div>
     <div class="card">
-        <img src="images/evs.jpeg" alt="Avatar" style="width:30%">
+        <img src="images/evs1.jpeg" alt="Avatar" style="width:30%">
         <div class="container">
             <h4><b>Environmental Studies & Earth Sciences</b></h4>
 
@@ -131,7 +131,7 @@
 </h2>
 <div class="cards3 d-flex">
     <div class="card">
-        <img src="images/chemistry.jpeg" alt="Avatar" style="width:80%">
+        <img src="images/chemistry.jpeg" alt="Avatar" style="width:60%">
         <h4><b>Chemistry lab</b></h4>
 
         <div class="container">
@@ -145,7 +145,7 @@
         </div>
     </div>
     <div class="card">
-        <img src="images/teachers.jpeg" alt="Avatar" style="width:80%">
+        <img src="images/teachers.jpeg" alt="Avatar" style="width:90%">
         <div class="container">
             <h4><b>Learning</b></h4>
         </div>
